--- a/assets/footer.css
+++ b/assets/footer.css
@@ -4,7 +4,7 @@ footer {
 	position: relative;
 }
 .footer__wrap {
-	max-width: 1110px;
+	max-width: 1200px;
 	margin: 0 auto;
 }
 .footer-top {
